--- a/src/main/resources/templates/franquiado/form.html
+++ b/src/main/resources/templates/franquiado/form.html
@@ -17,16 +17,23 @@
                 <div class="form-group">
                     <label for="txtendereco">Endereço:</label>
                     <input type="text" th:field="*{endereco}" class="form-control" id="txtendereco">    
-                </div> 
-                <!-- <div class="form-group"> 
-                    <label>Cidade:</label>
-                    <select class="form-select" th:field="*{}">
-                        <option></option>
-                    </select>
-                </div>-->    
+                </div>   
+                <section>
+                    <form action="">
+                        <label for="uf">UF:</label>
+                        <select id="uf">
+                            <option value=""></option>
+                        </select>
+                        <label for="cidade">Cidade:</label>
+                        <select id="cidade">
+                            <option value=""></option>
+                        </select>
+                    </form>
+                </section> 
                 <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
         </main>
         <footer th:include="layout :: footer"></footer>
+        <script type="text/javascript" th:src="@{/app.js}"></script>
     </body>
 </html>
