--- a/src/main/resources/templates/venda/form.html
+++ b/src/main/resources/templates/venda/form.html
@@ -11,11 +11,15 @@
             <input type="hidden" th:field="*{id}">
 
             <div class="form-group">
-                <label for="txtData">Data da Venda</label>
+                <label for="txtData">Data da Venda:</label>
                 <input type="date" th:field="*{data}" class="form-control" id="txtData">
             </div>
-
-
+            <div class="form-group">
+                <label>Franquiado:</label>
+                <select class="form-select" th:field="*{comprador}">
+                    <option th:each="umFranquiado : ${listaFranquiados}" th:text="${umFranquiado.nome}" th:value="${umFranquiado.id}"></option>
+                </select>
+            </div>
 
             <div class="card">
                 <div class="card-body">
@@ -70,11 +74,11 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="cbproduto">Tipo:</label>
-                        <select class="form-select" id="cbproduto" th:field="${novoItem.produto}">
+                        <label for="cbprodutotipo">Tipo:</label>
+                            <select class="form-select" id="cbprodutotipo" th:field="${novoItem.produto}">
                                 <option th:each="umproduto : ${listaProdutos}"
-                                        th:value="${umproduto.id}"
-                                        th:text="${umproduto.tipo}">
+                                    th:value="${umproduto.id}"
+                                    th:text="${umproduto.tipo}">
                                 </option>
                             </select>
                     </div>
