--- a/src/main/resources/templates/venda/index.html
+++ b/src/main/resources/templates/venda/index.html
@@ -7,17 +7,18 @@
     <nav th:replace="layout :: menu"></nav>
     <main class="container">
         <a href="/vendas/novo" class="btn btn-primary">Novo</a>
-        <table class="table">
+        <table class="table" >
             <thead>
                 <tr>
                     <th>Data da Venda</th>
-
+                    <th>Comprador</th>
+                    <th>Total</th>
                 </tr>
             </thead>
             <tbody>
                 <tr th:each="umaVenda : ${listaVendas}">
-                    <td th:text="${umaVenda.data}"></td>
-
+                    <td th:text="${umaVenda.data}"></th>
+                    <td th:text="${umaVenda.comprador?.nome}"></td>
                     <td th:text="${#aggregates.sum(umaVenda.listaItens.![getValorFinal])}"></td>
 
                 </tr>
