--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -5,7 +5,7 @@
     <body>
     <nav th:replace="layout :: menu"></nav>
         <main class="container">
-           testando o main 
+           <img src="../css/img/chocolate (1).png" alt="">
         <footer th:include="layout :: footer"></footer>
     </body>
 </html>
