--- a/src/main/resources/templates/franquiado/index.html
+++ b/src/main/resources/templates/franquiado/index.html
@@ -4,28 +4,37 @@
     <body>
     <nav th:replace="layout :: menu"></nav>
         <main class="container">
+            <h2>Controle de Franquiados:</h2>
             <a href="/franquiados/novo" class="btn btn-primary">Novo</a>
-            <table class="table" id="tabfranquiados">
+            <table class="table table-bordered" id="tabfranquiados">
                 <thead>
                     <tr>
                        <th>Id</th>
                        <th>Nome</th>
+                       <th>E-mail</th>
+                       <th>Telefone</th>
                        <th>CNPJ</th>
-                       <th>Endereço</th>
+                       <th>Logradouro</th>
+                       <th>Bairro</th>
                        <th>UF</th>
                        <th>Cidade</th>
-                       <th></th>
+                       <th>Editar</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr th:each="umFranquiado : ${listaFranquiados}">
                        <td th:text="${umFranquiado.id}"></td>
                        <td th:text="${umFranquiado.nome}"></td>
+                       <td th:text="${umFranquiado.email}"></td>
+                       <td th:text="${umFranquiado.telefone}"></td>
                        <td th:text="${umFranquiado.CNPJ}"></td>
-                       <td th:text="${umFranquiado.endereco}"></td>
+                       <td th:text="${umFranquiado.endereco.logradouro}"></td>
+                       <td th:text="${umFranquiado.endereco.bairro}"></td>
+                       
                        <td></td>
                        <td></td>
                        <td> 
+                            
                            <a th:href="@{'franquiados/alterar/' + ${umFranquiado.id}}" class="btn btn-warning">Alterar</a>
                            <button class="btn btn-danger js-delete" th:data-id="${umFranquiado.id}">Excluir</button>
                        </td>
