--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -4,8 +4,9 @@
     <head th:include="layout :: head"></head>
     <body>
     <nav th:replace="layout :: menu"></nav>
-        <main class="container">
-           <img src="../css/img/chocolate (1).png" alt="">
-        <footer th:include="layout :: footer"></footer>
+    <!-- <main th:include="layout :: principal">
+        oi
+    </main> -->
+    <footer th:include="layout :: footer"></footer>
     </body>
 </html>
