--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -4,9 +4,7 @@
     <head th:include="layout :: head"></head>
     <body>
     <nav th:replace="layout :: menu"></nav>
-    <!-- <main th:include="layout :: principal">
-        oi
-    </main> -->
+    <main th:replace="layout :: principal"></main>
     <footer th:include="layout :: footer"></footer>
     </body>
 </html>
