--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -39,39 +39,37 @@
 
       <main class="container" th:fragment="principal"
       style="min-height: 485px;">
-      <div class="com-md-12 mt-3"
-        style="border: 1px dotted #ccc; padding: 10px">
+      
+        <div class="card border-dark mb-3"
+        style="border: 1px solid #ccc; padding: 10px">
         <section>
-          <h2 style="border-bottom: 2px solid #000; margin-bottom: 20px">Resumos</h2>
-  
+          <h2 style="border-bottom: 2px solid #000; margin-bottom: 20px">Controle de Geral</h2>
           <div class="card-deck">
-            <div class="card text-white bg-primary mb-3"
+            <div class="card border-primary mb-3"
               style="max-width: 33rem;">
-              <div class="card-header">Clientes</div>
+              <div class="card-header">Funcionários</div>
               <div class="card-body">
                 <h6 class="card-title text-center">Quantidade Atual</h6>
-                <p class="card-text text-center"><span style="font-size: 40px;" th:text="${home.qtd_cliente}"></span></p>
+                <p class="card-text text-center" th:text=${home.qtd_produto}><span style="font-size: 40px;"></span></p>
               </div>
             </div>
-            <div class="card text-white bg-secondary mb-3"
-              style="max-width: 33rem;">
-              <div class="card-header">Fornecedores</div>
-              <div class="card-body">
-                <h6 class="card-title text-center">Quantidade Atual</h6>
-                <p class="card-text text-center"><span style="font-size: 40px;" th:text="${home.qtd_fornecedor}"></span></p>
+            <div class="card border-danger mb-3"
+                  style="max-width: 33rem;">
+                  <div class="card-header">Franquiados</div>
+                  <div class="card-body">
+                    <h6 class="card-title text-center">Quantidade Atual</h6>
+                    <p class="card-text text-center"><span style="font-size: 40px;"  th:text=${home.qtd_fornecedor}></span></p>
+                  </div>
+                </div><div class="card border-success mb-3"
+                  style="max-width: 33rem;">
+                  <div class="card-header">Produtos</div>
+                  <div class="card-body">
+                    <h6 class="card-title text-center">Quantidade Atual</h6>
+                    <p class="card-text text-center"><span style="font-size: 40px;"  th:text=${home.qtd_produto}></span></p>
+                  </div>
+                </div>
               </div>
-            </div><div class="card text-white bg-success mb-3"
-              style="max-width: 33rem;">
-              <div class="card-header">Produtos</div>
-              <div class="card-body">
-                <h6 class="card-title text-center">Quantidade Atual</h6>
-                <p class="card-text text-center"><span style="font-size: 40px;" th:text="${home.qtd_produto}"></span></p>
-              </div>
-            </div>
-          </div>
-  
-        </section>
-      </div>
+            </section>
     </main>
 
       <footer th:fragment="footer">
