--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -58,7 +58,7 @@
                   <div class="card-header">Franquiados</div>
                   <div class="card-body">
                     <h6 class="card-title text-center">Quantidade Atual</h6>
-                    <p class="card-text text-center"><span style="font-size: 40px;"  th:text=${home.qtd_fornecedor}></span></p>
+                    <p class="card-text text-center"><span style="font-size: 40px;"  th:text=${home.qtd_franquiado}></span></p>
                   </div>
                 </div><div class="card border-success mb-3"
                   style="max-width: 33rem;">
