--- a/src/main/resources/templates/franquiado/index.html
+++ b/src/main/resources/templates/franquiado/index.html
@@ -30,6 +30,8 @@
                        <td th:text="${umFranquiado.CNPJ}"></td>
                        <td th:text="${umFranquiado.endereco.logradouro}"></td>
                        <td th:text="${umFranquiado.endereco.bairro}"></td>
+                       <td></td>
+                       <td th:text="${umFranquiado.endereco.cidade}"></td>
                        
                        <td></td>
                        <td></td>
