--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -7,7 +7,7 @@
     <title>LAYOUT DAS PAG</title>
     
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}">
-    <link rel="stylesheet" href="css/style.css">
+
     
 </head>
 <body>
@@ -40,13 +40,13 @@
       <main class="container" th:fragment="principal"
       style="min-height: 485px;">
       
-        <div class="card border-dark mb-3"
-        style="border: 1px solid #ccc; padding: 10px">
-        <section>
+        <div class="card border-dark mb-3 "
+        style="border: 1px solid #ccc; padding: 10px; margin-top: 5%;">
+        <section >
           <h2 style="border-bottom: 2px solid #000; margin-bottom: 20px">Controle de Geral</h2>
-          <div class="card-deck">
+          <div class="card-deck row row-cols-3" style=" margin: 1%;">
             <div class="card border-primary mb-3"
-              style="max-width: 33rem;">
+              style="max-width: 33rem; margin: 1%;">
               <div class="card-header">Funcionários</div>
               <div class="card-body">
                 <h6 class="card-title text-center">Quantidade Atual</h6>
@@ -54,14 +54,14 @@
               </div>
             </div>
             <div class="card border-danger mb-3"
-                  style="max-width: 33rem;">
+                  style="max-width: 33rem;margin: 1%;">
                   <div class="card-header">Franquiados</div>
                   <div class="card-body">
                     <h6 class="card-title text-center">Quantidade Atual</h6>
                     <p class="card-text text-center"><span style="font-size: 40px;"  th:text=${home.qtd_fornecedor}></span></p>
                   </div>
                 </div><div class="card border-success mb-3"
-                  style="max-width: 33rem;">
+                  style="max-width: 33rem;margin: 1%;">
                   <div class="card-header">Produtos</div>
                   <div class="card-body">
                     <h6 class="card-title text-center">Quantidade Atual</h6>
