--- a/src/main/resources/templates/funcionario/index.html
+++ b/src/main/resources/templates/funcionario/index.html
@@ -12,37 +12,29 @@
                 <tr>
                    <th>Id</th>
                    <th>Nome</th>
-                   <th>Idade</th>
                    <th>E-mail</th>
                    <th>Telefone</th>
                    <th>CPF</th>
-                   <th>Logradouro</th>
-                   <th>Bairro</th>
-                   <th>UF</th>
-                   <th>Cidade</th>
-                   <th>Editar</th>
+                   <th>RG</th>
+                   <th>Idade</th>
+                   <th>Endereço</th>
                 </tr>
             </thead>
             <tbody>
-                <tr th:each="umFranquiado : ${listaFranquiados}">
-                   <td th:text="${umFuncionario.id}"></td>
-                   <td th:text="${umFuncionario.nome}"></td>
-                   <td th:text="${umFuncionario.idade}"></td>
-                   <td th:text="${umFuncionario.email}"></td>
-                   <td th:text="${umFuncionario.telefone}"></td>
-                   <td th:text="${umFuncionario.cpf}"></td>
-                   <td th:text="${umFuncionario.endereco.logradouro}"></td>
-                   <td th:text="${umFuncionario.endereco.bairro}"></td>
-                   <td></td>
-                   <td th:text="${umFuncionario.endereco.cidade}"></td>
-                   
-                   <td></td>
-                   <td></td>
-                   <td> 
-                        
+                <tr th:each="umFuncionario : ${listaFuncionarios}">
+                    <td th:text="${umFuncionario.id}"></td>
+                    <td th:text="${umFuncionario.nome}"></td>
+                    <td th:text="${umFuncionario.email}"></td>
+                    <td th:text="${umFuncionario.telefone}"></td>
+                    <td th:text="${umFuncionario.cpf}"></td>
+                    <td th:text="${umFuncionario.rg}"></td>
+                    <td th:text="${umFuncionario.idade}"></td>
+                    <td th:text="${umFuncionario.bairro}"></td>
+                    <td></td>
+                    <td> 
                        <a th:href="@{'funcionarios/alterar/' + ${umFuncionario.id}}" class="btn btn-warning">Alterar</a>
                        <button class="btn btn-danger js-delete" th:data-id="${umFuncionario.id}">Excluir</button>
-                   </td>
+                    </td>
                 </tr>
             </tbody>
         </table> 
