--- a/src/main/resources/templates/funcionario/form.html
+++ b/src/main/resources/templates/funcionario/form.html
@@ -3,7 +3,7 @@
 
     <head th:include="layout :: head"></head>
     <body>
-    <nav th:replace="layout :: menu"></nav>
+    <!-- <nav th:replace="layout :: menu"></nav> -->
     <main class="container">
         <form th:action="@{/funcionario/(form)}" method="POST" th:objectt="${funcionario}">
             <h2>Cadastre um novo Funcionario:</h2>
