--- a/src/main/resources/templates/estoque/index.html
+++ b/src/main/resources/templates/estoque/index.html
@@ -3,7 +3,7 @@
 
     <head th:include="layout :: head"></head>
     <body>
-    <nav th:replace="layout :: menu"></nav>
+    <!-- <nav th:replace="layout :: menu"></nav> -->
     <main class="container"
     style="min-height: 485px;">
     
