--- a/src/main/resources/templates/produto/form.html
+++ b/src/main/resources/templates/produto/form.html
@@ -4,7 +4,7 @@
 <head th:include="layout :: head"></head>
 
 <body>
-    <nav th:replace="layout :: menu"></nav>
+    <!-- <nav th:replace="layout :: menu"></nav> -->
     <main class="container">
         <form th:action="@{/produtos/(form)}" method="POST" th:object="${produto}" class="row g-3">
 
