--- a/src/main/resources/templates/produto/index.html
+++ b/src/main/resources/templates/produto/index.html
@@ -4,11 +4,11 @@
 <head th:include="layout :: head"></head>
 
 <body>
-    <nav th:replace="layout :: menu"></nav>
+    <!-- <nav th:replace="layout :: menu"></nav> -->
     <main class="container"> 
         <h2>Controle de Produtos:</h2>
-        <a href="/produtos/novo" class="btn btn-primary">Novo</a>
-        <table class="table table-bordered"id="tabprodutos" >
+        
+        <table class="table table-bordered table-light" id="tabprodutos" >
             <thead>
                 <tr>
                     <th>Id</th>
@@ -20,19 +20,18 @@
             </thead>
             <tbody>
                 <tr th:each="umProduto : ${listaProdutos}">
-                    <td th:text="${umProduto.id}"></td>
-                    <td th:text="${umProduto.marca}"></td>
-                    <td th:text="${umProduto.tipo}"></td>
-                    <td th:text="${umProduto.valor}"></td>
-                    
-                    <td>
+                    <td th:text="${umProduto.id}"    class="table-light"></td>
+                    <td th:text="${umProduto.marca}"    class="table-light"></td>
+                    <td th:text="${umProduto.tipo}"    class="table-light"></td>
+                    <td th:text="${umProduto.valor}"    class="table-light"></td>
+                    <td   class="table-light">
                         <a th:href="@{'/produtos/alterar/' + ${umProduto.id}}" class="btn btn-warning">Alterar</a>
                         <button class="btn btn-danger js-delete" th:data-id="${umProduto.id}">Excluir</button>
                     </td>
                 </tr>
             </tbody>
         </table>
-
+        <a href="/produtos/novo" class="btn btn-primary">Novo</a>
     </main>
     <div class="modal" tabindex="-1" id="modalproduto">
         <div class="modal-dialog">
