--- a/src/main/resources/templates/funcionario/index.html
+++ b/src/main/resources/templates/funcionario/index.html
@@ -10,14 +10,18 @@
         <table class="table table-bordered" id="tabfuncionarios">
             <thead>
                 <tr>
-                   <th>Id</th>
-                   <th>Nome</th>
-                   <th>E-mail</th>
-                   <th>Telefone</th>
-                   <th>CPF</th>
-                   <th>RG</th>
-                   <th>Idade</th>
-                   <th>Endereço</th>
+                    <th>Id</th>
+                    <th>Nome</th>
+                    <th>E-mail</th>
+                    <th>Telefone</th>
+                    <th>CPF</th>
+                    <th>RG</th>
+                    <th>Idade</th>
+                    <th>Logradouro</th>
+                    <th>Bairro</th>
+                    <th>UF</th>
+                    <th>Cidade</th>
+                    <th>Editar</th>
                 </tr>
             </thead>
             <tbody>
@@ -29,8 +33,10 @@
                     <td th:text="${umFuncionario.cpf}"></td>
                     <td th:text="${umFuncionario.rg}"></td>
                     <td th:text="${umFuncionario.idade}"></td>
-                    <td th:text="${umFuncionario.bairro}"></td>
+                    <td th:text="${umFuncionario.endereco.logradouro}"></td>
+                    <td th:text="${umFuncionario.endereco.bairro}"></td>
                     <td></td>
+                    <td th:text="${umFuncionario.endereco.cidade}"></td>
                     <td> 
                        <a th:href="@{'funcionarios/alterar/' + ${umFuncionario.id}}" class="btn btn-warning">Alterar</a>
                        <button class="btn btn-danger js-delete" th:data-id="${umFuncionario.id}">Excluir</button>
@@ -39,6 +45,24 @@
             </tbody>
         </table> 
     </main>
+    <div class="modal" tabindex="-1" id="modalfuncionario">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Excluir Funcionário</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Confirma a exclusão do Funcionário?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" id="btnnao" data-bs-dismiss="modal">Não</button>
+                    <button type="button" class="btn btn-primary" id="btnsim">Sim</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer th:include="layout :: footer"></footer>
+    <script th:src="@{/scriptfunci.js}"></script>
     </body>
 </html>
