--- a/src/main/resources/templates/produto/form.html
+++ b/src/main/resources/templates/produto/form.html
@@ -23,7 +23,7 @@
             </div>
             <div class="form-group">
                 <label for="txtvalor ">Valor:</label>
-                <input type="text " th:field="*{valor}" class="form-control" id="txtvalor">
+                <input type="number" th:field="*{valor}" class="form-control" id="txtvalor">
                 <p th:if="${#fields.hasErrors('valor')}" th:errors="*{valor}" class="alert alert-danger"></p>
             </div>
             <button type="submit" class="btn btn-primary">Enviar</button>
