--- a/src/main/resources/templates/franquiado/index.html
+++ b/src/main/resources/templates/franquiado/index.html
@@ -30,7 +30,7 @@
                         <td th:text="${umFranquiado.CNPJ}"></td>
                         <td th:text="${umFranquiado.endereco.logradouro}"></td>
                         <td th:text="${umFranquiado.endereco.bairro}"></td>
-                        <td></td>
+                        <td th:text="${umFranquiado.endereco.uf}"></td>
                         <td th:text="${umFranquiado.endereco.cidade}"></td>
                         <td> 
                            <a th:href="@{'franquiados/alterar/' + ${umFranquiado.id}}" class="btn btn-warning">Alterar</a>
